<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:foregroundGravity="center_horizontal"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/user_profile_short_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="Welcome Home"
            android:textColor="#fff"
            android:textSize="14sp" />

        <Button
            android:id="@+id/play"
            style="?android:textAppearanceSmall"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="250dp"
            android:background="@color/bg_login"
            android:text="@string/main"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/help"
            style="?android:textAppearanceSmall"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="190dp"
            android:background="@color/bg_login"
            android:text="@string/help"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/exit"
            style="?android:textAppearanceSmall"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="130dp"
            android:background="@color/bg_login"
            android:text="@string/exit"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


        <Button
            android:id="@+id/sign_out"
            style="?android:textAppearanceSmall"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="23dp"
            android:background="@color/bg_login"
            android:text="@string/btn_sign_out"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>